build: add JWT dependency/version variable

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
 
 	implementation "org.mapstruct:mapstruct:$mapStructVersion"
 
+	implementation "io.jsonwebtoken:jjwt:$jsonWebTokenVersion"
+
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
