--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,4 @@ springBootVersion=3.1.4
 springDependencyManagementVersion=1.1.3
 flywayDbVersion=9.17.0
 mapStructVersion=1.4.2.Final
+jsonWebTokenVersion=0.9.1
