--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	implementation "org.mapstruct:mapstruct:$mapStructVersion"
 
 	implementation "io.jsonwebtoken:jjwt:$jsonWebTokenVersion"
+	implementation "javax.xml.bind:jaxb-api:$jaxbApiVersion"
 
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
