--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ springDependencyManagementVersion=1.1.3
 flywayDbVersion=9.17.0
 mapStructVersion=1.4.2.Final
 jsonWebTokenVersion=0.9.1
+jaxbApiVersion=2.3.1
