--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation "io.jsonwebtoken:jjwt:$jsonWebTokenVersion"
 	implementation "javax.xml.bind:jaxb-api:$jaxbApiVersion"
 
+	implementation 'org.projectlombok:lombok:1.18.18'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
