build: add Lombok annotationProcessor

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 
 	implementation 'org.projectlombok:lombok:1.18.18'
 
+	annotationProcessor "org.projectlombok:lombok"
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 }
