build: configure PostgreSQL DB connection

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,11 @@
+server:
+  port: 8083
 
+spring:
+  r2dbc:
+    url: r2dbc:pool:postgres://localhost:5432/webflux_security
+    username: postgres
+    password: postgres
+  flyway:
+    url: jdbc:postgresql://localhost:5432/webflux_security
+    locations: classpath:db/migration
