fix: add Flyway user/password params to application.yaml

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,3 +9,5 @@ spring:
   flyway:
     url: jdbc:postgresql://localhost:5432/webflux_security
     locations: classpath:db/migration
+    user: ${spring.r2dbc.username}
+    password: ${spring.r2dbc.password}
