--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.session:spring-session-core'
+	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
 
+	implementation "io.r2dbc:r2dbc-postgresql:$r2dbcVersion"
+	implementation "org.postgresql:postgresql:$postgreSqlVersion"
 	implementation "org.flywaydb:flyway-core:$flywayDbVersion"
 
 	implementation "org.mapstruct:mapstruct:$mapStructVersion"
