--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
 springBootVersion=3.1.4
 springDependencyManagementVersion=1.1.3
+r2dbcVersion=0.8.13.RELEASE
+postgreSqlVersion=42.6.0
 flywayDbVersion=9.17.0
 mapStructVersion=1.4.2.Final
 jsonWebTokenVersion=0.9.1
