--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,6 +15,6 @@ spring:
 jwt:
   password:
     encoder:
-      secret: f
+      secret: 4M8ANEk-3ABXJ1VqL8a2ZKg2FfZgEe_Sdo4Dg3banlb
       iterations: 64
       keylength: 256
